--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,8 +79,8 @@ footer {
     border: 1px solid #dddddd;
 }
 
-#Portfolio_Body {
-    height: 830px;
+.Portfolio_Body {
+    height: 870px;
 }
 
 #Title {
@@ -245,11 +245,87 @@ button {
 
     .Body {
         margin-bottom: 20px;
+        /* background-color: black; */
     }
+
+    .Portfolio_wrapper {
+        width: 200x;
+        background-color:black;
+    }
+
+    .Portfolio_Body {
+        height: 1324px;
+    }
+
+/* Repositioning Images */
+
+    #Hangman {
+        position: relative;
+        left: 120px;
+        margin-bottom: 30px;
+    }
+
+    #RPG {
+        position: relative;
+        left: 120px;
+        margin-bottom: 30px;
+    }
+
+    #Trivia {
+        position: relative;
+        left: 120px;
+        margin-bottom: 30px;
+    }
+
+    #Rutgers {
+        position: relative;
+        left: 120px;
+        bottom: 204px;
+        margin-bottom: 30px;
+    }
+
+    #Rock {
+        position: relative;
+        left: 120px;
+        bottom: 273px;
+        margin-bottom: 30px;
+    }
+
+/* Overlays */
+
+    #HangmanOverlay {
+        position: relative;
+        bottom: 114px;
+        left: 119px;
+    }
+    
+    #TriviaOverlay {
+        position: relative;
+        bottom: 496px;
+        left: 120px;
+    }
+    
+    #RockOverlay {
+        position: relative;
+        bottom: 876px;
+        left: 120px;
+    }
+    
+    #RPGOverlay {
+        position: relative;
+        bottom: -291px;
+        left: 120px;
+    }
+    
+    #RutgersOverlay {
+        position: relative;
+        bottom: 86px;
+        left: 120px;
+    }    
 
 }
 
-@media screen and (min-width: 640px) and (max-width: 768px) {
+@media screen and (min-width: 641px) and (max-width: 768px) {
 
     #wrapper {
         width: 650px;
@@ -257,14 +333,24 @@ button {
 
     .Body {
         margin-bottom: 20px;
+        background-color: pink;
+    }
+
+    .Portfolio_wrapper {
+        width: 600px;
+        background-color: pink;
     }
 
 }
 
-@media screen and (min-width: 768px) and (max-width: 980px) {
+@media screen and (min-width: 769px) and (max-width: 980px) {
 
     #wrapper {
         width: 750px;
     }
 
+    .Portfolio_wrapper {
+        width: 600px;
+        background-color: limegreen;
+    }
 }
