--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,22 @@ footer {
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
+.Links {
+    position: fixed;
+    top: 6%;
+    left: 80%;
+}
+
+#LinkAttributes {
+    float: left;
+    text-decoration: none;
+    font-size: 18px;
+    margin-right: 15px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    background-color: white;
+}
+
 #LinkOne {
     position: fixed;
     top: 4%;
