--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ footer {
     background-color: #666666;
     border-top: 8px solid #4aaaa5;
     padding-top: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 33px;
     padding-left: 50%;
     padding-right: 50%;
     position: fixed;
@@ -54,6 +54,7 @@ footer {
     padding: 5px;
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    margin-bottom: 15px;
 }
 
 /* Message input box */
