Finalized all 798px pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,40 +120,6 @@ footer {
     background-color: white;
 }
 
-#LinkOne {
-    position: fixed;
-    top: 4%;
-    right: 15%;
-    color: #777777;
-    text-decoration: none;
-    font-size: 18px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-}
-
-#LinkTwo {
-    position:fixed;
-    top: 4%;
-    right: 9.4%;
-    color: #777777;
-    text-decoration: none;
-    font-size: 18px;
-    padding-left: 8px;
-    padding-right: 8px;
-    border-left: 1px solid #e6e6e6;
-    border-right: 1px solid #e6e6e6;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-}
-
-#LinkThree {
-    position: fixed;
-    top: 4%;
-    right: 5%;
-    color: #777777;
-    text-decoration: none;
-    font-size: 18px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-}
-
 #Subtitle {
     color: #4aaaa5;
     margin-top: 7px;
@@ -399,12 +365,74 @@ header {
 
     .Body {
         margin-bottom: 20px;
-        background-color: pink;
     }
 
     .Portfolio_wrapper {
         width: 600px;
-        background-color: pink;
+    }
+
+/* Moving title to the side */
+
+    #Title {
+        position: relative;
+        top: 0%;
+        right: 9%;
+        display: block;
+        font-size: 30px;
+        width: 260px;
+        background-color: #4aaaa5;
+        text-align: center;
+        margin-left: 122px;
+        margin-top: -7px;
+        margin-bottom: -6px;
+        padding-top: 25px;
+        padding-bottom: 25px;
+        padding-left: 25px;
+        padding-right: 25px;
+        color: white;
+        font-family: 'Georgia', Times, Times New Roman, serif;
+    }
+
+    /* Moving links to the left */
+
+    .Links {
+        position: fixed;
+        top: 6%;
+        left: 70%;
+    }
+
+    /* Decreasing images */
+
+    .Pictures {
+        width:264px; 
+    }
+
+    .Overlay_Text {
+        width:264px;
+    }
+
+    #Rutgers {
+        position: relative;
+        left: 334px;
+        bottom: 891px;
+    }
+
+    #Rock {
+        position: relative;
+        left: 334px;
+        bottom: 961px;
+    }
+
+    #RPGOverlay {
+        position: relative;
+        bottom: 411px;
+        left: 334px;
+    }
+    
+    #RutgersOverlay {
+        position: relative;
+        bottom: 793px;
+        left: 334px;
     }
 
 }
@@ -419,4 +447,12 @@ header {
         width: 600px;
         background-color: limegreen;
     }
+
+        /* Moving links to the left */
+
+        .Links {
+            position: fixed;
+            top: 6%;
+            left: 70%;
+        }
 }
